--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
 <p>新しいコメントは、表示されているコメントの最下部（「↑最新のコメント」と表記）に記入してください。</p>
 
 
-<p class="impression">青柳くんのコメント</p>
-<p class="impression">阿部くんのコメント</p>
-<p class="impression">遠藤くんのコメント</p>
-<p class="impression">遠藤くんのコメント</p>
+<p class="impression">まとめサイト</p>
+<p class="impression">え</p>
+<p class="impression">たけこ</p>
+<p class="impression">おの</p>
+<p class="impression">みずき</p>
+<p class="impression">しゅうへい</p>
 <p class="impression">Pull request (-_-)b </p>
 <p >↑最新のコメント</p>
 <h3>github情報など</h3>
